# easypdf-rs

./: .gitignore  Cargo.toml  README.md
crates/easypdf/: Cargo.toml
crates/easypdf-core/: Cargo.toml
crates/easypdf-core/src/: content.rs  enums.rs  error.rs  event.rs  lib.rs  metadata.rs  style.rs  traits.rs
crates/easypdf-derive/: Cargo.toml
crates/easypdf-derive/src/: implementation.rs  lib.rs
crates/easypdf-derive/tests/: trybuild_tests.rs
crates/easypdf-derive/tests/trybuild/: 00-minimal.rs  01-basic-text.rs  02-multiple-fields.rs  03-ignore-fields.rs  04-custom-page.rs
crates/easypdf-layout/: Cargo.toml
crates/easypdf-layout/src/: lib.rs
crates/easypdf-manipulate/: Cargo.toml
crates/easypdf-manipulate/src/: lib.rs
crates/easypdf-manipulate/tests/: integration_tests.rs
crates/easypdf-reader/: Cargo.toml
crates/easypdf-reader/src/: lib.rs
crates/easypdf-reader/tests/: fixtures.rs  integration_tests.rs
crates/easypdf-template/: Cargo.toml
crates/easypdf-template/src/: lib.rs
crates/easypdf-template/tests/: integration_tests.rs
crates/easypdf-writer/: Cargo.toml
crates/easypdf-writer/src/: font.rs  image.rs  lib.rs  shape.rs  writer.rs
crates/easypdf/src/: lib.rs
crates/easypdf/tests/: html_tests.rs
docs/: architecture.md  compatibility.md  implementation-plan.md  usage-guide.md
