[package]
name = "easypdf-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Automatic layout engine for easypdf-rs (FlowLayout)"

[dependencies]
easypdf-core = { path = "../easypdf-core" }
easypdf-writer = { path = "../easypdf-writer" }
