[package]
name = "easypdf-manipulate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "PDF manipulation (merge, split, rotate, reorder) for easypdf-rust (lopdf backend)"

[dependencies]
easypdf-core = { path = "../easypdf-core" }
lopdf.workspace = true
