[package]
name = "easypdf-reader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "PDF reading and text extraction for easypdf-rust (lopdf backend)"

[dependencies]
easypdf-core = { path = "../easypdf-core" }
lopdf.workspace = true
