[package]
name = "easypdf-template"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "PDF template and form filling for easypdf-rust (lopdf backend)"

[dependencies]
easypdf-core = { path = "../easypdf-core" }
easypdf-writer = { path = "../easypdf-writer" }
lopdf.workspace = true
