[package]
name = "easypdf-writer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "PDF creation and writing for easypdf-rust (printpdf backend)"

[dependencies]
easypdf-core = { path = "../easypdf-core" }
printpdf.workspace = true
image.workspace = true
chrono.workspace = true
